--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "17.8.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
